[release-v2.11] changing cmd call, was calling it wrongly (#5811)

--- a/.github/workflows/registry.yaml
+++ b/.github/workflows/registry.yaml
@@ -142,4 +142,4 @@ jobs:
           LOG: "DEBUG"
         run: |
           make pull-scripts
-          ./bin/charts-build-scripts scan-registries
+          ./bin/charts-build-scripts sync-registries
