[dev-v2.12] rancher-provisioning-capi 107.0.0+up0.8.0 add (#5770)
Signed-off-by: swastik959 <Sswastik959@gmail.com>

--- a/release.yaml
+++ b/release.yaml
@@ -112,3 +112,5 @@ rancher-compliance:
   - 107.0.0+up1.0.0-rc.3
 rancher-compliance-crd:
   - 107.0.0+up1.0.0-rc.3
+rancher-provisioning-capi:
+  - 107.0.0+up0.8.0
