--- a/charts/fleet-agent/105.0.3+up0.11.3/values.yaml
+++ b/charts/fleet-agent/105.0.3+up0.11.3/values.yaml
@@ -1,7 +1,7 @@
 image:
-  os: "windows,linux"
-  repository: rancher/fleet-agent
-  tag: v0.11.3
+  os: "linux"
+  repository: vadimzededa/fleet-agent
+  tag: test
 
 # The public URL of the Kubernetes API server running the Fleet Controller must be set here
 # Example: https://example.com:6443
