--- a/charts/fleet/105.0.3+up0.11.3/values.yaml
+++ b/charts/fleet/105.0.3+up0.11.3/values.yaml
@@ -1,12 +1,12 @@
 image:
-  repository: rancher/fleet
-  tag: v0.11.3
-  imagePullPolicy: IfNotPresent
+  repository: vadimzededa/fleet
+  tag: test
+  imagePullPolicy: Always
 
 agentImage:
-  repository: rancher/fleet-agent
-  tag: v0.11.3
-  imagePullPolicy: IfNotPresent
+  repository: vadimzededa/fleet-agent
+  tag: test
+  imagePullPolicy: Always
 
 # For cluster registration the public URL of the Kubernetes API server must be set here
 # Example: https://example.com:6443
