Add image secret to gitjob deployment.

--- a/charts/fleet/105.0.3+up0.11.3/templates/deployment_gitjob.yaml
+++ b/charts/fleet/105.0.3+up0.11.3/templates/deployment_gitjob.yaml
@@ -29,6 +29,8 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: gitjob
+      imagePullSecrets:
+      - name: zks-fleet-image-secret
       containers:
         - image: "{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}"
           name: gitjob
