--- a/charts/fleet/105.0.3+up0.11.3/templates/deployment.yaml
+++ b/charts/fleet/105.0.3+up0.11.3/templates/deployment.yaml
@@ -31,6 +31,8 @@ spec:
       - name: zks-fleet-image-secret #vf hard code for now!!!!! sks-server will create this secret before this deployment will be created
       containers:
       - env:
+        - name: VADIM
+          value: vadim
         - name: NAMESPACE
           valueFrom:
             fieldRef:
@@ -86,9 +88,9 @@ spec:
 {{- if $.Values.extraEnv }}
 {{ toYaml $.Values.extraEnv | indent 8}}
 {{- end }}
-        image: '{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}'
+        image: vadimzededa/fleet:test #'{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}'
         name: fleet-controller
-        imagePullPolicy: "{{ $.Values.image.imagePullPolicy }}"
+        imagePullPolicy: Always
         {{- if $.Values.metrics.enabled }}
         ports:
         - containerPort: 8080
@@ -142,9 +144,9 @@ spec:
         - name: CATTLE_ELECTION_RENEW_DEADLINE
           value: {{$.Values.leaderElection.renewDeadline}}
         {{- end }}
-        image: '{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}'
+        image: vadimzededa/fleet:test #'{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}'
         name: fleet-cleanup
-        imagePullPolicy: "{{ $.Values.image.imagePullPolicy }}"
+        imagePullPolicy: Always
         command:
         - fleetcontroller
         - cleanup
@@ -187,9 +189,9 @@ spec:
         - name: CATTLE_ELECTION_RENEW_DEADLINE
           value: {{$.Values.leaderElection.renewDeadline}}
         {{- end }}
-        image: '{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}'
+        image: vadimzededa/fleet:test #'{{ template "system_default_registry" $ }}{{ $.Values.image.repository }}:{{ $.Values.image.tag }}'
         name: fleet-agentmanagement
-        imagePullPolicy: "{{ $.Values.image.imagePullPolicy }}"
+        imagePullPolicy: Always
         command:
         - fleetcontroller
         - agentmanagement
